--- a/automationscript/pom.xml
+++ b/automationscript/pom.xml
@@ -31,6 +31,14 @@
     <version>8.1.1</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.1.0</version>
+</dependency>
+
+
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
